Initialize color_buffer_half_float_rgba in passthrough

If HDR is requested, DCHECK that RGBA_16F is supported.

R=geofflang
TBR=zmo

Bug: 784536
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Ib775c15c8a0a0d4f89c33f408c3dede2907d49ce
Reviewed-on: https://chromium-review.googlesource.com/779865
Reviewed-by: ccameron <ccameron@chromium.org>
Reviewed-by: Geoff Lang <geofflang@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518407}
Former-commit-id: 58c07c7bdf1b9c9d0ebc853e96342f3376d875bf